@@ -4,6 +4,7 @@ This file includes a list of high level updates for each milestone release.
 
 Milestone 104
 -------------
+  * New functions SkBitmap::getColor4f and SkPixmap::getColor4f return float colors.
   * SkRuntimeEffect takes and returns a const SkData.
   * SkRasterHandleAllocator::MakeCanvas now takes optional SkSurfaceProps.
   * SkImage::MakeFromPicture and SkImageGenerator::MakeFromPicture now take an optional
